--- a/style.css
+++ b/style.css
@@ -126,3 +126,83 @@ input:focus{
     border: 4px dashed gray;
 
 }
+
+/*! LINK PSUEDO CLASSES */
+
+nav.link a:link{
+    color: red;
+}
+
+nav.link a:visited{
+    color: darkgreen;
+}
+
+nav.link a:active{
+    color: lightcoral;
+}
+
+nav.link a:hover{
+    color: blue;
+}
+
+nav.cw a{
+    text-decoration: none;
+    border: 2px solid darkorange;
+    padding: 5px;
+    margin: 10px;
+    color: gray;
+    border-radius: 10px;
+    background-color: darkorange;
+}
+
+nav.cw a:hover{
+    background-color: gray;
+    color: darkorange;
+}
+
+nav.cw a:hover i{
+    color: purple;
+}
+
+nav a i{
+    font-size: 1.1rem;
+}
+
+/*! PSUEDO ELEMENTS */
+
+.p-elements::first-line{
+    color: red;
+}
+
+.p-elements::first-letter{
+    font-size: 2rem;
+    font-weight: 900;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+ul.before-after{
+    list-style-type: none;
+}
+
+ul.before-after li{
+    background-color: lightcoral;
+    margin: 0.5rem;
+    width: 40%;
+    border-radius: 10px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    /* padding-left: 20px; */
+    /* text-align: center; */
+    /* margin: 10px auto; */
+}
+
+ul.before-after li::before{
+    content: '🏁';
+    margin: 10px;
+}
+
+ul.before-after li:nth-child(4)::after{
+    content: '🏎️';
+    margin: 10px;
+} 
